# cardgamesbot

./: CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yml  rust.yml
bot/: Cargo.toml
bot/src/: bot.rs  game_agent.rs  main.rs  primitives.rs  telegram.rs  threading.rs  utils.rs
games/: Cargo.toml
games/src/: lib.rs  primitives.rs  utils.rs
games/src/games/: beccaccino.rs  briscola.rs  mod.rs  scala40.rs
src/: beccaccino.rs  bot.rs  briscola.rs  game_agent.rs  main.rs  primitives.rs  telegram.rs  threading.rs  utils.rs
