[package]
name = "cardgamesbot"
version = "0.1.0"
authors = ["Eugenio Tampieri <eugenio@eutampieri.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = "0.6"
rand = "0.7"
itertools = "0.9"
ureq = "1.1"
pct-str = "1.0"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.2"
base64 = "0.12"
telegram-bot-raw = "0.7"
serde_json = "1.0"
ulid = "0.3"
text_io = "0.1"
git-version = "0.3"
