[package]
name = "cardgamesbot"
version = "0.1.0"
authors = ["Eugenio Tampieri <eugenio@eutampieri.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
ureq = "2.5"
pct-str = "1.0"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.2"
base64 = "0.13"
telegram-bot-raw = "0.8"
serde_json = "1.0"
ulid = "1.0"
text_io = "0.1"
git-version = "0.3"
cardgames = { path = "../games" }
