[package]
name = "cardgames"
version = "0.1.0"
authors = ["Eugenio Tampieri <eugenio@eutampieri.eu>"]
edition = "2018"
description = "A collection of (mostly italians) card games"
license = "AGPL-3.0"
repository = "https://github.com/eutampieri/cardgamesbot/tree/master/games"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
serde = {version = "1.0", features = ["derive"]}
fraction = "0.6"
rand = "0.7"
